# typed-ctypes

./: .gitignore  LICENSE  README.md  check.sh  pyproject.toml  test_typed_ctypes.py  typed_ctypes.py
.github/workflows/: ci.yml
testlib/: Cargo.toml
testlib/src/: lib.rs
